Bug 491279 - crash at start
Summary: crash at start
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.2.3
Platform: Compiled Sources Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-04 22:01 UTC by pkmnggm.030043@gmail.com
Modified: 2025-10-24 17:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crash at start (41.73 KB, text/plain)
2024-08-04 22:01 UTC, pkmnggm.030043@gmail.com
Details
attachment-2205266-0.html (2.06 KB, text/html)
2024-08-05 08:59 UTC, pkmnggm.030043@gmail.com
Details
attachment-2214740-0.html (2.60 KB, text/html)
2024-08-05 09:48 UTC, pkmnggm.030043@gmail.com
Details
attachment-2217659-0.html (1.38 KB, text/html)
2024-08-05 10:03 UTC, pkmnggm.030043@gmail.com
Details
krita-sysinfo.log (7.70 KB, application/octet-stream)
2024-08-05 10:08 UTC, pkmnggm.030043@gmail.com
Details
kritacrash.log (85.92 KB, application/octet-stream)
2024-08-05 10:08 UTC, pkmnggm.030043@gmail.com
Details
attachment-2219354-0.html (2.33 KB, text/html)
2024-08-05 10:11 UTC, pkmnggm.030043@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pkmnggm.030043@gmail.com 2024-08-04 22:01:49 UTC
Created attachment 172284 [details]
crash at start

STEPS TO REPRODUCE
1. start the app

OBSERVED RESULT
it only starts after a few tries

EXPECTED RESULT
it starts for the firts try

SOFTWARE/OS VERSIONS
Version: 5.2.3 (git 68d178c)
Windows:  Windows 10 (x86_64)

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2024-08-05 07:58:13 UTC
I cannot reproduce this, but I do see that a crash happens in the code that updates the splash screen. That should not be possible since the splash screen is built-in, but it looks like the image is not available. You set Platform to "Compiled sources" -- did you build Krita yourself? Or else, could something have corrupted the install, like anti-virus software?
Comment 2 pkmnggm.030043@gmail.com 2024-08-05 08:59:36 UTC
Created attachment 172293 [details]
attachment-2205266-0.html

I just updated my previous version to 5.2.3 from the official site. later
on I tried to uninstall and reinstall it because of the crash, but no
success, then I tried it again, that time I also deleted the other krita
related files from AppData\Local... Sometimes I'm able to start the program
after a few tries.

Halla Rempt <bugzilla_noreply@kde.org> ezt írta (időpont: 2024. aug. 5., H,
9:58):

> https://bugs.kde.org/show_bug.cgi?id=491279
>
> Halla Rempt <halla@valdyas.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|REPORTED                    |NEEDSINFO
>            Severity|critical                    |crash
>                  CC|                            |halla@valdyas.org
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from Halla Rempt <halla@valdyas.org> ---
> I cannot reproduce this, but I do see that a crash happens in the code that
> updates the splash screen. That should not be possible since the splash
> screen
> is built-in, but it looks like the image is not available. You set
> Platform to
> "Compiled sources" -- did you build Krita yourself? Or else, could
> something
> have corrupted the install, like anti-virus software?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 pkmnggm.030043@gmail.com 2024-08-05 09:48:55 UTC
Created attachment 172295 [details]
attachment-2214740-0.html

In addition, I uninstalled the app and reinstalled the previous 5.2.2, and
it works fine! between 89 and 160 there's a dividing with zero, can it be
the problem?

Attila Baros <pkmnggm.030043@gmail.com> ezt írta (időpont: 2024. aug. 5.,
H, 10:59):

> I just updated my previous version to 5.2.3 from the official site. later
> on I tried to uninstall and reinstall it because of the crash, but no
> success, then I tried it again, that time I also deleted the other krita
> related files from AppData\Local... Sometimes I'm able to start the program
> after a few tries.
>
> Halla Rempt <bugzilla_noreply@kde.org> ezt írta (időpont: 2024. aug. 5.,
> H, 9:58):
>
>> https://bugs.kde.org/show_bug.cgi?id=491279
>>
>> Halla Rempt <halla@valdyas.org> changed:
>>
>>            What    |Removed                     |Added
>>
>> ----------------------------------------------------------------------------
>>              Status|REPORTED                    |NEEDSINFO
>>            Severity|critical                    |crash
>>                  CC|                            |halla@valdyas.org
>>          Resolution|---                         |WAITINGFORINFO
>>
>> --- Comment #1 from Halla Rempt <halla@valdyas.org> ---
>> I cannot reproduce this, but I do see that a crash happens in the code
>> that
>> updates the splash screen. That should not be possible since the splash
>> screen
>> is built-in, but it looks like the image is not available. You set
>> Platform to
>> "Compiled sources" -- did you build Krita yourself? Or else, could
>> something
>> have corrupted the install, like anti-virus software?
>>
>> --
>> You are receiving this mail because:
>> You reported the bug.
>
>
Comment 4 Dmitry Kazakov 2024-08-05 09:55:17 UTC
Hi, pkmnggm!

Could you also attach the info from %localappdata%\krita-sysinfo.log ? It might be that there is some weird scaling factor is set...
Comment 5 pkmnggm.030043@gmail.com 2024-08-05 10:03:45 UTC
Created attachment 172296 [details]
attachment-2217659-0.html

yes, I'll do it, I just need to update from this stable 5.2.2 to 5.2.3 again

Dmitry Kazakov <bugzilla_noreply@kde.org> ezt írta (időpont: 2024. aug. 5.,
H, 11:55):

> https://bugs.kde.org/show_bug.cgi?id=491279
>
> Dmitry Kazakov <dimula73@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |dimula73@gmail.com
>
> --- Comment #4 from Dmitry Kazakov <dimula73@gmail.com> ---
> Hi, pkmnggm!
>
> Could you also attach the info from %localappdata%\krita-sysinfo.log ? It
> might
> be that there is some weird scaling factor is set...
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 6 pkmnggm.030043@gmail.com 2024-08-05 10:08:38 UTC
Created attachment 172297 [details]
krita-sysinfo.log

I tried to reproduce it, you can see it from the crash log, that the first
attempt crashed, second worked, others failed again till the last one.

Attila Baros <pkmnggm.030043@gmail.com> ezt írta (időpont: 2024. aug. 5.,
H, 12:03):

> yes, I'll do it, I just need to update from this stable 5.2.2 to 5.2.3
> again
>
> Dmitry Kazakov <bugzilla_noreply@kde.org> ezt írta (időpont: 2024. aug.
> 5., H, 11:55):
>
>> https://bugs.kde.org/show_bug.cgi?id=491279
>>
>> Dmitry Kazakov <dimula73@gmail.com> changed:
>>
>>            What    |Removed                     |Added
>>
>> ----------------------------------------------------------------------------
>>                  CC|                            |dimula73@gmail.com
>>
>> --- Comment #4 from Dmitry Kazakov <dimula73@gmail.com> ---
>> Hi, pkmnggm!
>>
>> Could you also attach the info from %localappdata%\krita-sysinfo.log ? It
>> might
>> be that there is some weird scaling factor is set...
>>
>> --
>> You are receiving this mail because:
>> You reported the bug.
>
>
Comment 7 pkmnggm.030043@gmail.com 2024-08-05 10:08:39 UTC
Created attachment 172298 [details]
kritacrash.log
Comment 8 pkmnggm.030043@gmail.com 2024-08-05 10:11:15 UTC
Created attachment 172299 [details]
attachment-2219354-0.html

same issue with "krita-x64-5.2.4-setup"

Attila Baros <pkmnggm.030043@gmail.com> ezt írta (időpont: 2024. aug. 5.,
H, 12:08):

> I tried to reproduce it, you can see it from the crash log, that the first
> attempt crashed, second worked, others failed again till the last one.
>
> Attila Baros <pkmnggm.030043@gmail.com> ezt írta (időpont: 2024. aug. 5.,
> H, 12:03):
>
>> yes, I'll do it, I just need to update from this stable 5.2.2 to 5.2.3
>> again
>>
>> Dmitry Kazakov <bugzilla_noreply@kde.org> ezt írta (időpont: 2024. aug.
>> 5., H, 11:55):
>>
>>> https://bugs.kde.org/show_bug.cgi?id=491279
>>>
>>> Dmitry Kazakov <dimula73@gmail.com> changed:
>>>
>>>            What    |Removed                     |Added
>>>
>>> ----------------------------------------------------------------------------
>>>                  CC|                            |dimula73@gmail.com
>>>
>>> --- Comment #4 from Dmitry Kazakov <dimula73@gmail.com> ---
>>> Hi, pkmnggm!
>>>
>>> Could you also attach the info from %localappdata%\krita-sysinfo.log ?
>>> It might
>>> be that there is some weird scaling factor is set...
>>>
>>> --
>>> You are receiving this mail because:
>>> You reported the bug.
>>
>>
Comment 9 Bug Janitor Service 2024-08-06 03:46:38 UTC
🐛🧹 Thanks for your comment!

Automatically switching the status to REPORTED so the team can perform further triage.

In the future you may also do this yourself when providing needed information.
Comment 10 Halla Rempt 2024-10-31 10:14:12 UTC
Git commit 010db3e6b7ee6b980626591f3ae5d0ab339cd6cc by Halla Rempt.
Committed on 31/10/2024 at 10:14.
Pushed by rempt into branch 'master'.

Check whether the splash is valid

M  +2    -0    libs/ui/kis_splash_screen.cpp

https://invent.kde.org/graphics/krita/-/commit/010db3e6b7ee6b980626591f3ae5d0ab339cd6cc
Comment 11 Halla Rempt 2025-10-24 17:26:13 UTC
Git commit 967f6500e3f5a5cbb8e5912432779db1f00a3c1a by Halla Rempt.
Committed on 24/10/2025 at 17:25.
Pushed by rempt into branch 'krita/5.2'.

Check whether the splash is valid
(cherry picked from commit 010db3e6b7ee6b980626591f3ae5d0ab339cd6cc)

M  +2    -0    libs/ui/kis_splash_screen.cpp

https://invent.kde.org/graphics/krita/-/commit/967f6500e3f5a5cbb8e5912432779db1f00a3c1a