Check whether the splash is valid

BUG:491279